Auto stash before merge of "master" and "origin/master"

--- a/Capstone Project/Data Story.ipynb
+++ b/Capstone Project/Data Story.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Introduction\n",
     "\n",
@@ -20,9 +17,7 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -36,11 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -70,11 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -891,10 +878,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "In figure 1 above we can see that Trump took 60% of the total available opportunities to speak."
    ]
@@ -902,11 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1726,10 +1706,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Figure 1 is augmented above in Figure 2 with a histogram"
    ]
@@ -1738,9 +1715,7 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1757,11 +1732,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2578,10 +2549,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "As well as taking more turns to speak Trump also delivered more words in total. So the turns taken cannot wholly be put down to interjection or rudeness."
    ]
@@ -2590,9 +2558,7 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -2628,11 +2594,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3458,10 +3420,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "The grade comprehension level of Trump's speech was that of a Grade 4 students, whereas Hillary required a grade 7 comprehension level. So while Trump used more words and took more turns, Clinton demanded slightly more cognitive energy from the audience. Based on this analysis I don't think either side could reasonably claim an objective moral or intellectual high ground. Relatively, Trump appears to be trying to be more aggressive by physically dominating the debate and appealling less to intellect, and Hillary relatively vice versa."
    ]
@@ -3470,9 +3429,7 @@
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -3492,19 +3449,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -4319,10 +4270,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "From the wordcloud above we can see that Mrs Clinton's speech had a hopeful 'progressive' future-focussed tone with 'going', 'will', 'make' and 'want' featuring prominently. Mrs Clinton also implores her audience to 'think' and 'people' feature heavily which are a proxy for more complex terms like society and community. She also refers to Mr Trump heavily as 'Donald' which could be a way of anchoring cognitive association but that's just speculation at this stage."
    ]
@@ -4330,11 +4278,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -5147,22 +5091,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Mr Trump's two most repeated words are 'people' and 'going'. This invokes more of the tone of a Patriarchal Dictator tone than Clinton's thoughtful, more progressive tone. Ultimately the candidate's word clouds are more similar than they are different, with many of the same words appearing in each."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "In conclusion, Rene Girard's Memetic theory of conflict states that all conflict stems from humans fighting over the same thing. Both candidates were given fairly equal weight given their interpersonal styles and the types of voter they were targetting. Both candidates word clouds are surprisingly similar given the vitriol and hatred of the campaign, which affirms the Girard hypothesis in that both candidates are fighting over similar cognitive territory in the mind of the voter. \n",
     "\n",
@@ -5175,9 +5111,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
@@ -5186,9 +5120,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
@@ -5211,7 +5143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
