--- a/Capstone Project/Final Project/Final Project Intro Part 1.ipynb
+++ b/Capstone Project/Final Project/Final Project Intro Part 1.ipynb
@@ -1564,7 +1564,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1665,9 +1667,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:nltk]",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "conda-env-nltk-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
