--- a/Capstone Project/Final Project/Untitled.ipynb
+++ b/Capstone Project/Final Project/Untitled.ipynb
@@ -1995,7 +1995,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dem_list = []\n",
@@ -2082,7 +2084,9 @@
    },
    "outputs": [],
    "source": [
-    "from wordcloud import WordCloud\n",
+    "from wordcloud import WordCloud, STOPWORDS\n",
+    "\n",
+    "stopwords = set(STOPWORDS)\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "#plt.imshow(wordcloud)\n",
