--- a/Capstone Project/Milestone Report/Presidential Primary Debates.ipynb
+++ b/Capstone Project/Milestone Report/Presidential Primary Debates.ipynb
@@ -157,32 +157,7 @@
     }
    ],
    "source": [
-    "df = df[df.Speaker != 'AUDIENCE']\n",
-    "df = df[df.Speaker != 'CANDIDATES']\n",
-    "df = df[df.Speaker != 'BELL']\n",
-    "df = df[df.Speaker != 'UNKNOWN']\n",
-    "df = df[df.Speaker != 'UNKNOWN (TRANSLATED)']\n",
-    "df = df[df.Speaker != 'OTHER']\n",
-    "df = df[df.Speaker != 'QUESTION']\n",
-    "df = df[df.Speaker != 'QUESTION (TRANSLATED)']\n",
-    "\n",
-    "\n",
-    "df = df.replace(['Perry (VIDEO)', 'Fiorina (VIDEO)', 'Salinas (TRANSLATED)', 'Ramos (TRANSLATED)', 'Sanders (VIDEO)', \\\n",
-    "           'Ramos (VIDEO)', 'Clinton (VIDEO)', 'Rubio (VIDEO)', 'Cruz (VIDEO)', 'Cuomo (VIDEO)', 'Trump (VIDEO)', \\\n",
-    "           \"O'Reilly (VIDEO)\", 'Kasich (VIDEO)'], \\\n",
-    "          ['Perry', 'Fiorina', 'Salinas', 'Ramos', 'Sanders', 'Ramos', 'Clinton', 'Rubio', 'Cruz', 'Cuomo', 'Trump', \\\n",
-    "          \"O'Reilly\", \"Kasich\"]) \n",
-    "df = df[df.Speaker != 'Hannity']\n",
-    "df = df[df.Speaker != \"O'Reilly\"]\n",
-    "df = df[df.Speaker != 'Woodruff']\n",
-    "df = df[df.Speaker != 'Ifill']\n",
-    "df = df[df.Speaker != 'Tapper']\n",
-    "df = df[df.Speaker != 'Seib']\n",
-    "df = df[df.Speaker != 'Wallace']\n",
-    "df = df[df.Speaker != 'Harwood']\n",
-    "df = df[df.Speaker != 'Cavuto']\n",
-    "\n",
-    "df.head()"
+    "-"
    ]
   },
   {
@@ -195,7 +170,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2009,7 +1986,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "trump_sent= speaker_sent('Trump')\n",
@@ -3211,7 +3190,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mean_sent_list = []\n",
@@ -4102,9 +4083,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:nltk]",
+   "display_name": "Python [conda env:image-classification]",
    "language": "python",
-   "name": "conda-env-nltk-py"
+   "name": "conda-env-image-classification-py"
   },
   "language_info": {
    "codemirror_mode": {
